# rangesnext

./: CMakeLists.txt  vcpkg.json
include/cor3ntin/rangesnext/: enumerate.hpp
test/: enumerate.cpp
